fix bugs in admin controller